--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
+    useLibrary('org.apache.http.legacy')
     compileSdkVersion 23
     buildToolsVersion '23.0.3'
     defaultConfig {
@@ -18,6 +19,7 @@ android {
     }
     productFlavors {
     }
+
 }
 
 dependencies {
@@ -28,4 +30,5 @@ dependencies {
     compile files('libs/AMap_2DMap_V2.8.1_20160202.jar')
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:support-v4:23.2.1'
+    compile files('libs/gson-2.2.4.jar')
 }
